external-crates/move/crates/move-compiler/tests/move_check/verification/single_module_invalid.exp
error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/verification/single_module_invalid.move:3:7
  │
3 │     #[verify_only]
  │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/single_module_invalid.move:12:7
   │
12 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

